--- a/Preprocessing/Generate_STAR_genome/workflow/generate_grch38_genome.yaml
+++ b/Preprocessing/Generate_STAR_genome/workflow/generate_grch38_genome.yaml
@@ -1,6 +1,6 @@
 fasta_urls: 
- - ftp://ftp.ncbi.nlm.nih.gov/refseq/H_sapiens/annotation/GRCh38_latest/refseq_identifiers/GRCh38_latest_rna.fna.gz
-gtf_url: ftp://ftp.ensembl.org/pub/release-77/gtf/homo_sapiens/Homo_sapiens.GRCh38.77.gtf.gz
+ - ftp://ftp.ensembl.org/pub/release-90/fasta/homo_sapiens/dna/Homo_sapiens.GRCh38.dna_sm.primary_assembly.fa.gz
+gtf_url: ftp://ftp.ensembl.org/pub/release-90/gtf/homo_sapiens/Homo_sapiens.GRCh38.90.gtf.gz
 star_max_ram: 350000000000
 star_nthreads: 47
 
